[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = "Pytest homework."
authors = ["Anastasiia Nezgovorova <odabcrfake@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
